Fixed spacing issues. Added simple author box shortcode.

--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -358,7 +358,6 @@ $tt-media-margin: 20px;
 }
 
 .tt-article__more {
-  margin-top: 50px;
   margin-bottom: 50px;
   padding: 5px 15px;
   border-top: solid 5px $tt-blue-transp;
