--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -195,7 +195,7 @@ h3 {
 
 // Search bar styles
 .tt-search-bar {
-  padding-top: 40px;
+  padding-top: 70px;
   text-align: center;
 
   input {
